Added the possibility to change app language. Refactor ThemeOption.kt and added LanguageOption.kt, added LocalizedName.kt interface that provides string res value `localizedName`. Added AppCompat library, replaced ComponentActivity by AppCompatActivity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Meddocs.Starting"
-        tools:targetApi="31">
+        android:localeConfig="@xml/locales_config"
+        tools:targetApi="33">
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:configChanges="locale|colorMode|layoutDirection"
             android:theme="@style/Theme.Meddocs.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +27,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
     </application>
 
 </manifest>
