--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:configChanges="locale|colorMode|layoutDirection"
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/Theme.Meddocs.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
