--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ local.properties
 /.idea/runConfigurations.xml
 /.idea/vcs.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/deviceManager.xml
