--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,7 @@
 agp = "8.12.1"
 kotlin = "2.2.10"
 coreKtx = "1.17.0"
-junit = "5.14.0"
-junitPlugin = "1.14.0.0"
+junit = "6.0.1"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
@@ -28,6 +27,7 @@ inject = "1"
 securityCrypto = "1.1.0"
 mockk = "1.14.6"
 kotest = "6.0.7"
+hamcrest = "3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -102,6 +102,7 @@ androidx-security-crypto = { group = "androidx.security", name = "security-crypt
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
 junit-jupiter-params = { group = "org.junit.jupiter", name = "junit-jupiter-params", version.ref = "junit" }
+junit-platform-launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit" }
 
 # Mockk
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
@@ -110,6 +111,9 @@ mockk-agent = { group = "io.mockk", name = "mockk-agent", version.ref = "mockk" 
 
 # Kotest
 kotest-assertions-core = { group = "io.kotest", name = "kotest-assertions-core", version.ref = "kotest" }
+
+# Hamcrest
+hamcrest = { group = "org.hamcrest", name = "hamcrest", version.ref = "hamcrest" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -125,6 +129,3 @@ hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 google-protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 android-library = { id = "com.android.library", version.ref = "agp" }
-
-# JUnit 5
-junit = { id = "de.mannodermaus.android-junit5", version.ref = "junitPlugin" }
