--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,6 +35,8 @@ desugar = "2.0.4"
 extJunit = "1.3.0"
 uiAutomator = "2.2.0"
 jazzer = "0.28.0"
+sonarqube = "7.2.1.6560"
+detekt = "1.23.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -140,6 +142,10 @@ cucumber-picocontainer = { group = "io.cucumber", name = "cucumber-picocontainer
 # Jazzer
 jazzer-unit = { group = "com.code-intelligence", name = "jazzer-junit", version.ref = "jazzer" }
 
+# Detekt formatting
+
+detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
@@ -154,3 +160,9 @@ hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 google-protobuf = { id = "com.google.protobuf", version.ref = "protobufPlugin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+
+# Sonarqube
+sonarqube = { id = "org.sonarqube", version.ref = "sonarqube" }
+
+# Detekt
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
